--- a/public/views/about-modern.ejs
+++ b/public/views/about-modern.ejs
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/css/navbar-modern.css" />
     <link rel="stylesheet" href="/css/modal-modern.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
+    <link rel="stylesheet" href="/css/dropdown-modern.css" />
+    
+    <!-- SVG Icons -->
+    <script src="/js/svgIcons.js"></script>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
