--- a/public/views/browse-modern.ejs
+++ b/public/views/browse-modern.ejs
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="/css/modal-modern.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
     <link rel="stylesheet" href="/css/browse-projects.css" />
+    <link rel="stylesheet" href="/css/dropdown-modern.css" />
     
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- SVG Icons -->
+    <script src="/js/svgIcons.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
     <script src="/js/theme.js"></script>
