--- a/public/views/edit-profile-modern.ejs
+++ b/public/views/edit-profile-modern.ejs
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="/css/modal-modern.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
     <link rel="stylesheet" href="/css/utility-pages-modern.css" />
+    <link rel="stylesheet" href="/css/dropdown-modern.css" />
     
-    <!-- Google Fonts -->
+    <!-- SVG Icons -->
+    <script src="/js/svgIcons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
