--- a/public/views/landing-modern.ejs
+++ b/public/views/landing-modern.ejs
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/css/how-it-works.css" />
     <link rel="stylesheet" href="/css/cta-banner.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
+    <link rel="stylesheet" href="/css/dropdown-modern.css" />
+    
+    <!-- SVG Icons -->
+    <script src="/js/svgIcons.js"></script>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
