--- a/public/views/otherProfile-modern.ejs
+++ b/public/views/otherProfile-modern.ejs
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/css/modal-modern.css" />
     <link rel="stylesheet" href="/css/footer-modern.css" />
     <link rel="stylesheet" href="/css/other-profile-modern.css" />
+    <link rel="stylesheet" href="/css/dropdown-modern.css" />
+    
+    <!-- SVG Icons -->
+    <script src="/js/svgIcons.js"></script>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
