--- a/public/views/browse-modern.ejs
+++ b/public/views/browse-modern.ejs
@@ -25,7 +25,7 @@
       <%- include('partials/navbar-modern') %>
       
 
-      <main style="flex: 1; padding-top: 4rem;">
+      <main style="flex: 1; padding-top: 0;">
 
         <section class="browse-header">
           <div class="container">
