--- a/public/views/project-detail-modern.ejs
+++ b/public/views/project-detail-modern.ejs
@@ -26,7 +26,7 @@
       <%- include('partials/navbar-modern') %>
       
       <!-- Main Content -->
-      <main style="flex: 1; padding-top: 4rem;">
+      <main style="flex: 1; padding-top: 0;">
         <div class="project-detail-container">
           <div class="container">
             
